--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -10,12 +10,13 @@
         android:layout_height="0dip"
         android:layout_weight="1" >
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
-            android:src="@drawable/welcom_logo" />
+            android:gravity="center"
+            android:text="超级微信"
+            android:drawableLeft="@drawable/mobile"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -125,5 +126,13 @@
                 android:textSize="18sp" />
         </LinearLayout>
     </RelativeLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/setServerIp"/>
+    </LinearLayout>
 </LinearLayout>
