--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="超级微信"
+            android:textColor="#000"
             android:drawableLeft="@drawable/mobile"/>
     </RelativeLayout>
 
@@ -96,6 +97,7 @@
             android:orientation="horizontal" >
 
             <Button
+                android:id="@+id/btn_register"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
@@ -111,6 +113,7 @@
                 android:textSize="18sp" />
 
             <Button
+                android:id="@+id/btn_login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
@@ -126,13 +129,12 @@
                 android:textSize="18sp" />
         </LinearLayout>
     </RelativeLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+
         <TextView
+            android:id="@+id/tvServerIp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/setServerIp"/>
-    </LinearLayout>
+
 </LinearLayout>
