--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -16,6 +16,7 @@
             android:layout_centerInParent="true"
             android:text="超级微信"
             android:gravity="center"
+            android:textColor="#000"
             android:drawableLeft="@drawable/mobile" />
     </RelativeLayout>
 
