--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -187,6 +187,7 @@
             android:layout_marginTop="20dp"
             android:orientation="horizontal" >
             <Button
+                android:id="@+id/btn_login"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -202,6 +203,7 @@
                 android:textSize="20sp" />
 
             <Button
+                android:id="@+id/btn_register"
                 android:layout_weight="3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
