register页面功能实现

--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -175,7 +175,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@id/iv_avatar"
                 android:background="@null"
-                android:hint="@string/avatar"
+                android:hint="头像"
                 android:inputType="textPassword"
                 android:paddingLeft="10dip"
                 android:singleLine="true"
