--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -135,6 +135,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/setServerIp"/>
+            android:text="设置服务器IP地址"/>
 
 </LinearLayout>
