修改添加联系人布局文件，头像控件和无结果textview

--- a/res/layout/activity_add_contact.xml
+++ b/res/layout/activity_add_contact.xml
@@ -95,6 +95,16 @@
                 android:text="@string/button_add"
                 android:textSize="14sp" />
         </RelativeLayout>
+
     </LinearLayout>
+    <TextView
+        android:id="@+id/tvSearchResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="查找无结果"
+        android:textColor="#000"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        />
 
 </LinearLayout>
