完善添加好友页面1、创建mtvSearchResult并实例化2、在addcontactactivity的searchcontact方法中完成查找功能。

--- a/res/layout/activity_add_contact.xml
+++ b/res/layout/activity_add_contact.xml
@@ -101,7 +101,9 @@
         android:id="@+id/tvSearchResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="查找无结果"
+        android:text="无结果"
+        android:textSize="25sp"
+        android:paddingTop="30dp"
         android:textColor="#000"
         android:layout_gravity="center"
         android:visibility="gone"
