--- a/res/layout/item_newgood.xml
+++ b/res/layout/item_newgood.xml
@@ -5,8 +5,8 @@
     android:background="#fff">
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/nivAvatar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/default_face"
         android:scaleType="fitXY"/>
     <TextView
