1、商品排序。2、商品详情布局。

--- a/res/layout/item_newgood.xml
+++ b/res/layout/item_newgood.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#fff">
+    android:background="#fff"
+    android:orientation="vertical">
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/nivAvatar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="250dp"
         android:src="@drawable/default_face"
         android:scaleType="fitXY"/>
     <TextView
@@ -30,4 +31,4 @@
         android:textSize="18sp"
         android:textColor="#000"/>
 
-</RelativeLayout>
+</LinearLayout>
