二、精选 1、boutiqueFragment 2、继承V4包fragment 3、布局和NewGoodFragment一样 4、修改path，删除pageId 5、BoutiqueBean返回值 6、boutiqueAdapter 7、删除sortBy相关 8、修改boutiqueBean 9、onCreateViewHolder中修改布局 10、精选完成（未能下载数据）

--- a/res/layout/item_boutique.xml
+++ b/res/layout/item_boutique.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#fff"
     android:orientation="vertical"
-    android:id="@+id/layout_good">
+    android:id="@+id/layout_boutique">
     <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/nivAvatar"
-        android:layout_width="200dp"
+        android:id="@+id/niv_boutique_avatar"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
         android:src="@drawable/default_face"
         android:scaleType="fitXY"/>
     <TextView
-        android:id="@+id/tv_good_name"
-        android:layout_below="@id/nivAvatar"
+        android:id="@+id/tv_boutique_title"
+        android:layout_below="@id/niv_boutique_avatar"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
@@ -22,8 +22,18 @@
         android:textSize="18sp"
         android:textColor="#000"/>
     <TextView
-        android:id="@+id/tv_price"
-        android:layout_below="@id/tv_good_name"
+        android:id="@+id/tv_boutique_name"
+        android:layout_below="@id/tv_boutique_title"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:textSize="18sp"
+        android:textColor="#000"/>
+    <TextView
+        android:id="@+id/tv_boutique_desc"
+        android:layout_below="@id/tv_boutique_name"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
@@ -32,4 +42,4 @@
         android:textSize="18sp"
         android:textColor="#000"/>
 
-</LinearLayout>
+</RelativeLayout>
