--- a/res/layout/item_category_child.xml
+++ b/res/layout/item_category_child.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/ebpay_dimen_20dp"
+        android:layout_toRightOf="@id/niv_category_child"
         android:layout_centerVertical="true"
         android:textSize="18sp"
         android:text="333"
