--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -5,22 +5,9 @@
     android:background="#eff2f6"
     android:orientation="vertical" >
 
+    <include layout="@layout/item_back_title_white"/>
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="超级微信"
-            android:textColor="#000"
-            android:drawableLeft="@drawable/mobile"/>
-    </RelativeLayout>
-
-    <RelativeLayout
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1" >
@@ -29,8 +16,6 @@
             android:id="@+id/rl_username"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
             android:background="#fff" >
 
             <ImageView
@@ -60,9 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="54dp"
             android:layout_below="@id/rl_username"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:background="#fff" >
 
             <ImageView
@@ -94,32 +77,15 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginTop="30dp"
-            android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
-                android:layout_weight="1"
-                android:background="@drawable/button_register_bg"
-                android:gravity="center"
-                android:onClick="register"
-                android:paddingBottom="7dp"
-                android:paddingTop="7dp"
-                android:text="@string/register"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-
+            android:orientation="vertical" >
             <Button
                 android:id="@+id/btn_login"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
                 android:layout_weight="1"
-                android:background="@drawable/button_login_bg"
+                android:background="@color/orange"
                 android:gravity="center"
                 android:onClick="login"
                 android:paddingBottom="7dp"
@@ -127,6 +93,24 @@
                 android:text="@string/login"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/ebpay_dimen_20dp"
+                android:layout_marginLeft="100dip"
+                android:layout_marginRight="100dip"
+                android:layout_weight="1"
+                android:background="#fadfa1"
+                android:gravity="center"
+                android:onClick="register"
+                android:paddingBottom="7dp"
+                android:paddingTop="7dp"
+                android:text="@string/register"
+                android:textColor="@color/orange"
+                android:textSize="18sp" />
+
+
         </LinearLayout>
     </RelativeLayout>
 
