--- a/res/layout/item_back_title_white.xml
+++ b/res/layout/item_back_title_white.xml
@@ -11,7 +11,7 @@
         android:src="@drawable/back_press"
         android:layout_centerVertical="true"/>
     <TextView
-        android:id="@+id/tv_back_title"
+        android:id="@+id/tv_good_details"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_centerInParent="true"
