--- a/res/layout/personal_center.xml
+++ b/res/layout/personal_center.xml
@@ -3,23 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/common_bg"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f55500"
-        android:gravity="center_vertical" >
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/iv_personal_center_msg"
-            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:paddingRight="5dp"
-            android:src="@drawable/tb_icon_more_msg_white_56"/>
+            android:src="@drawable/tb_icon_more_msg_white_56" />
+
         <TextView
-            android:id="@+id/tv_personal_center"
+            android:id="@+id/tv_personal_center_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/iv_personal_center_msg"
@@ -31,26 +32,32 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_personal_center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#f55500"
-        android:gravity="center_vertical" >
+        android:gravity="center_vertical">
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/iv_user_avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/nopic"
-            />
+            android:layout_width="60dip"
+            android:layout_height="60dip"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="8dip"
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_avatar"/>
+
         <TextView
             android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_user_avatar"
             android:layout_centerInParent="true"
+            android:layout_toRightOf="@id/iv_user_avatar"
             android:text="username"
             android:textColor="#fff"
             android:textSize="20sp" />
+
         <ImageView
             android:id="@+id/iv_user_qrcode"
             android:layout_width="wrap_content"
@@ -58,69 +65,135 @@
             android:layout_centerInParent="true"
             android:layout_toRightOf="@id/tv_user_name"
             android:paddingRight="5dp"
-            android:src="@drawable/tb_icon_home_qrcode_normal"/>
+            android:src="@drawable/tb_icon_home_qrcode_normal" />
 
     </RelativeLayout>
-
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fadingEdge="none" >
+        android:fadingEdge="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
-                android:layout_marginTop="10dip"
-                >
+                android:layout_marginTop="10dip">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
                     android:paddingLeft="10dip"
                     android:text="我的订单"
-                    android:layout_centerInParent="true"
                     android:textColor="#000" />
 
                 <ImageView
                     android:id="@+id/iv_me_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/right_arrow_icon"
                     android:layout_alignParentRight="true"
-                    />
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/right_arrow_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@id/iv_me_right"
                     android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@id/iv_me_right"
                     android:text="查看全部已购宝贝"
-                    android:textColor="#000"
-                     />
+                    android:textColor="#000" />
 
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    >
+
+                    <TextView
+                        android:id="@+id/tvCollectCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="100"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="收藏的宝贝"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="100"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="收藏的店铺"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="100"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="我的足迹"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
             <GridView
-                android:id="@+id/center_user_order_lis"
+                android:id="@+id/center_user_order_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
                 android:cacheColorHint="#000000"
-                android:paddingTop="@dimen/ebpay_dimen_20dp"
-                android:paddingBottom="10dp"
                 android:numColumns="5"
-                >
+                android:paddingBottom="10dp"
+                android:paddingTop="@dimen/ebpay_dimen_20dp">
 
             </GridView>
+
             <TextView
                 android:id="@+id/textview3"
                 android:layout_width="match_parent"
@@ -128,30 +201,29 @@
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
                 android:background="#E6E6E6" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
                 android:layout_marginRight="10dip"
-                android:layout_marginTop="30dip"
-                >
+                android:layout_marginTop="30dip">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
                     android:paddingLeft="10dip"
                     android:text="我的卡卷包"
-                    android:layout_centerInParent="true"
                     android:textColor="#000" />
 
                 <ImageView
                     android:id="@+id/iv_me_bao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/right_arrow_icon"
                     android:layout_alignParentRight="true"
-                    />
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/right_arrow_icon" />
 
 
             </RelativeLayout>
@@ -159,14 +231,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/rl_switch_notification"
                     android:layout_width="match_parent"
                     android:layout_height="50dip"
                     android:background="@drawable/btn_bottom_selector"
-                    android:padding="10dip" >
+                    android:padding="10dip">
+
                     <ImageView
                         android:id="@+id/iv_switch_open_notification"
                         android:layout_width="wrap_content"
@@ -175,11 +248,12 @@
                         android:layout_centerVertical="true"
                         android:background="@drawable/center_card_coupon1"
                         android:visibility="visible" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_centerVertical="true"
+                        android:layout_weight="1"
                         android:paddingLeft="10dip"
                         android:text="生活卷"
                         android:textColor="@android:color/black"
@@ -192,8 +266,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/right_arrow_icon"
-                         />
+                        android:background="@drawable/right_arrow_icon" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -201,7 +274,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dip"
                     android:background="@drawable/btn_bottom_selector"
-                    android:padding="10dip" >
+                    android:padding="10dip">
+
                     <ImageView
                         android:id="@+id/iv_wangdian"
                         android:layout_width="wrap_content"
@@ -210,11 +284,12 @@
                         android:layout_centerVertical="true"
                         android:background="@drawable/center_card_coupon2"
                         android:visibility="visible" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_centerVertical="true"
+                        android:layout_weight="1"
                         android:paddingLeft="10dip"
                         android:text="网店券"
                         android:textColor="@android:color/black"
@@ -227,8 +302,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/right_arrow_icon"
-                        />
+                        android:background="@drawable/right_arrow_icon" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -236,7 +310,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dip"
                     android:background="@drawable/btn_bottom_selector"
-                    android:padding="10dip" >
+                    android:padding="10dip">
+
                     <ImageView
                         android:id="@+id/iv_huiyuanka"
                         android:layout_width="wrap_content"
@@ -245,21 +320,23 @@
                         android:layout_centerVertical="true"
                         android:background="@drawable/center_card_coupon3"
                         android:visibility="visible" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_centerVertical="true"
+                        android:layout_weight="1"
                         android:paddingLeft="10dip"
                         android:text="会员卡"
                         android:textColor="@android:color/black"
                         android:textSize="14sp"
                         android:typeface="serif" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_centerVertical="true"
+                        android:layout_weight="1"
                         android:paddingLeft="10dip"
                         android:text="一卡在收，逛店无忧"
                         android:textColor="@android:color/black"
@@ -272,31 +349,32 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/right_arrow_icon"
-                        />
+                        android:background="@drawable/right_arrow_icon" />
                 </LinearLayout>
-                
+
                 <LinearLayout
                     android:id="@+id/rl_wodezhuanxiang"
                     android:layout_width="match_parent"
                     android:layout_height="50dip"
                     android:background="@drawable/btn_bottom_selector"
-                    android:padding="10dip" >
+                    android:padding="10dip">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_centerVertical="true"
+                        android:layout_weight="1"
                         android:paddingLeft="10dip"
                         android:text="我的专享特权"
                         android:textColor="@android:color/black"
                         android:textSize="14sp"
                         android:typeface="serif" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_centerVertical="true"
+                        android:layout_weight="1"
                         android:paddingLeft="10dip"
                         android:text="领金币，看优惠"
                         android:textColor="@android:color/black"
@@ -309,9 +387,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/right_arrow_icon"
-                        />
+                        android:background="@drawable/right_arrow_icon" />
                 </LinearLayout>
+
                 <TextView
                     android:id="@+id/textview1"
                     android:layout_width="match_parent"
