--- a/res/layout/personal_center.xml
+++ b/res/layout/personal_center.xml
@@ -119,6 +119,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/ll_collect"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
