--- a/res/layout/item_cat_filter.xml
+++ b/res/layout/item_cat_filter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_category_child"
+    android:id="@+id/layout_cat_child"
     android:layout_width="match_parent"
     android:layout_height="44dp">
 
